--- a/bball/README.Rmd
+++ b/bball/README.Rmd
@@ -20,3 +20,7 @@ This is a shiny application to demonstrate creating, reading, updating, and dele
 ## Screenshot of Application
 
 ![](img/img01.png)
+
+## To run the app on RStudio use the command below
+
+`runGitHub("fkotey/R_Projects/", subdir = "bball/")`
